# fyp_buddy

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json
.github/workflows/: azure-static-web-apps-agreeable-tree-043f83000.yml
app/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml
app/.langgraph_api/: .langgraph_ops.pckl
app/src/agent/: config.py
app/src/agent/application/agents/chains/: connection_finding_chain.py  interest_generation_chain.py  project_generation_chain.py
app/src/agent/application/agents/graphs/: build_find_match_graph.py  build_interest_gen_graph.py  build_proj_gen_graph.py
app/src/agent/application/agents/graphs/nodes/: extract_top_five_node.py  find_connection_node.py  generate_interests_node.py  generate_projects_node.py
app/src/agent/application/agents/prompts/: pull_connection_finding_prompt.py  pull_interest_prompt.py  pull_proj_prompts.py
app/src/agent/domain/: match_state.py  metadata.py  prompts.py
app/src/agent/infrastructure/mongo/: service.py
app/test_scripts/: README.md  run_all_tests.py  test_backend.py  test_config.py  test_error_handling.py  test_interest_agent.py  test_match_agent.py  test_mongodb.py  test_project_agent.py
apps/fyp_agent/: find_conn.py  langgraph.json  pyproject.toml  run_etl.py  run_prompts.py
apps/fyp_agent/.langgraph_api/: .langgraph_ops.pckl
apps/fyp_agent/configs/: etl.yaml
apps/fyp_agent/pipelines/: __init__.py  etl.py
apps/fyp_agent/steps/: __init__.py
backend/: .dockerignore  Dockerfile  Makefile  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/: __init__.py
backend/app/api/middleware/: __init__.py  cors.py  error_handler.py  rate_limiting.py
backend/app/api/routes/: __init__.py  health.py  matching.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/models/: __init__.py  errors.py  requests.py  responses.py
backend/app/services/: __init__.py  matching_service.py  rate_limit_service.py
backend/app/utils/: __init__.py
backend/src/agent/application/agents/graphs/: build_find_match_graph.py  build_interest_gen_graph.py  build_proj_gen_graph.py
backend/src/agent/application/agents/graphs/nodes/: fetch_data_node.py  should_fetch_more.py
backend/src/agent/application/agents/prompts/: pull_interest_prompt.py
backend/src/agent/domain/: gen_state.py  project_info.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  setup.sh  tailwind.config.js  tsconfig.json  vite.config.js
frontend-react/: package-lock.json
frontend-react/src/: App.jsx
frontend/public/: about.txt  index.html  manifest.json
frontend/src/: .env.production  App.css  App.jsx  App.tsx  config.js  index.css  types.ts
frontend/src/components/: ConnectionStatus.tsx  HandleForm.jsx  LoadingSpinner.tsx  (+5 more)
(+71 files in other folders)
